1999-04-09  Andrew T. Veliath  <andrewtv@usa.net>

	* Update version to 0.6.8.

1999-04-01  Andrew T. Veliath  <andrewtv@usa.net>

	* IDL.h.new.in (IDL_tree_remove_inhibits): Move prototype here
	from util.h.

	* util.c (IDL_tree_optimize): Skip inhibit removal if
	the IDLF_INHIBIT_TAG_ONLY parse flag is specified.

1999-03-29  Andrew T. Veliath  <andrewtv@usa.net>

	* Update version to 0.6.6.

	* util.c (load_inhibits): Don't recurse inhibited nodes.

1999-03-23  Andrew T. Veliath  <andrewtv@usa.net>

	* Update version to 0.6.4.

	* lexer.l: Allow more whitespace in __declspec, and generate error
	if we see a code fragment and the syntax isn't enabled.

	* parser.y: Much improved error messages about illegal types in
	attributes, operations and parameters.  Also, explicit errors
	added for struct, union and enum definitions with missing
	identifiers.

	* (IDLF_PROPERTIES): New syntax flag; properties can be used
	independently of XPIDL.

	* IDL.h.new.in, util.h: Use G_GNUC_PRINTF on warning and error
	functions.

	* util.c: Rework IDL_tree_to_IDL logic a bit to accept more node
	types, even literals.

	* IDL.h.new.in: Add a step variable to IDL_tree_func_data.  This
	is 0 in the first call, and increments for every call thereafter
	(currently only from 0 to 1).

1999-03-22  Andrew T. Veliath  <andrewtv@usa.net>

	* util.c (IDL_tree_error): 
	(IDL_tree_warning): If node is NULL, omit file and line number
	information gracefully.

	* parser.y: Error out with better message if one tries to use a
	void type in an attribute or parameter.

	* util.c (IDL_tree_to_IDL*): If IDL_ns is NULL, output flag
	IDLF_OUTPUT_NO_QUALIFY_IDENTS is enabled automatically.

	* IDL.h.new.in: Added a flags and data field to the end of the
	IDL_tree node type, for application use. The application can
	assume these will be initialized to zero. Should be backward
	compatible with apps that don't touch it.

	* util.c (IDL_emit_IDL_type_pre): For sequences output proper
	typespec.
