@@ -55,6 +55,7 @@ extern "C" {
 #define IDLF_IGNORE_FORWARDS		(1UL << 4)
 #define IDLF_PEDANTIC			(1UL << 5)
 #define IDLF_INHIBIT_TAG_ONLY		(1UL << 6)
+#define IDLF_INHIBIT_INCLUDES		(1UL << 7)
 
 /* syntax extension parse flags */
 #define IDLF_TYPECODES			(1UL << 16)
